[package]
name = "pallet-chain-extension-assets"
version = "0.1.0"
license = "Apache-2.0"
description = "Assets chain extension for WASM contracts"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
assets-chain-extension-types = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
pallet-assets = { workspace = true }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
env_logger = "0.9"
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"num-traits/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"pallet-assets/std",
	"assets-chain-extension-types/std",
	"pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["pallet-assets/runtime-benchmarks"]
