[package]
name = "balances"
version = "2.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"

[dependencies]
ink_primitives = { git = "https://github.com/paritytech/ink", version = "2.1.0", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", version = "2.1.0", default-features = false, features = ["derive"], optional = true }
ink_core = { git = "https://github.com/paritytech/ink", version = "2.1.0", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", version = "2.1.0", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "balances"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_core/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
