[package]
name = "cash"
version = "0.1.0"
authors = ["Takumi Yamashita <takumi@staked.co.jp>"]
edition = "2018"

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core", rev = "7d19156eede9dd2f5e2e58c13302707c1f89fe2f" }
ink_model = { git = "https://github.com/paritytech/ink", package = "ink_model", rev = "7d19156eede9dd2f5e2e58c13302707c1f89fe2f" }
ink_lang = { git = "https://github.com/paritytech/ink", package = "ink_lang", rev = "7d19156eede9dd2f5e2e58c13302707c1f89fe2f" }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
primitives = { path = "../primitives", default-features = false }
commitment = { path = "../commitment", default-features = false }
deposit = { path = "../deposit", default-features = false }
predicate = { path = "../predicate", deafult-features = false }

[lib]
name = "cash"
crate-type = ["cdylib"]

[features]
default = []
test-env = [
    "ink_core/test-env",
    "ink_model/test-env",
    "ink_lang/test-env",
]
generate-api-description = [
    "ink_lang/generate-api-description"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
