[package]
name = "payout"
version = "1.3.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"

[dependencies]
ink_abi = { version = "2.1.0", git = "https://github.com/paritytech/ink", tag = "latest-v2", package = "ink_abi", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "2.1.0", git = "https://github.com/paritytech/ink", tag = "latest-v2", package = "ink_primitives", default-features = false }
ink_core = { version = "2.1.0", git = "https://github.com/paritytech/ink", tag = "latest-v2", package = "ink_core", default-features = false }
ink_lang = { version = "2.1.0", git = "https://github.com/paritytech/ink", tag = "latest-v2", package = "ink_lang", default-features = false }
wbalances = { path = "../wbalances", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.3", default-features = false, features = ["derive"], optional = true }

[lib]
name = "payout"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Required for ABI generation, and using this contract as a dependency.
	# If using `cargo contract build`, it will be automatically disabled to produce a smaller Wasm binary
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_abi/std",
    "ink_core/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "wbalances/std",
]
ink-as-dependency = []
