[package]
name = "primitives"
version = "0.1.0"
authors = ["Takumi Yamashita <takumi@staked.co.jp>"]
edition = "2018"

[dependencies]
ink_core = { git = "https://github.com/paritytech/ink", package = "ink_core" }
ink_model = { git = "https://github.com/paritytech/ink", package = "ink_model" }
ink_lang = { git = "https://github.com/paritytech/ink", package = "ink_lang" }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
num-traits = { version = "0.2", default-features = false }

[features]
default = []
test-env = [
    "ink_core/test-env",
]
generate-api-description = [
    "ink_lang/generate-api-description"
]
