[package]
name = "plasm-child"
version = "0.1.0"
authors = ["Takumi Yamashita <s.a.t.e.3.ths@gmail.com>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
version = '1.0.0'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
version = '1.0.0'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
version = '1.0.0'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
version = '1.0.0'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
version = '1.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
version = '1.0.0'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
version = '1.0.0'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
version = '1.0.0'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
version = '1.0.0'

[dependencies.utxo]
default_features = false
path = '../utxo'
package = 'plasm-utxo'

[dependencies.merkle]
default_features = false
path = '../merkle'
package = 'plasm-merkle'

[features]
default = ["std"]
std = [
    'parity-codec/std',
    'primitives/std',
    'sr-primitives/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'utxo/std',
    'merkle/std',
]
