[package]
name = "plasm-parent"
version = "0.1.0"
authors = ["Takumi Yamashita <s.a.t.e.3.ths@gmail.com>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
tag = 'v1.0.0rc2'

[dependencies.sr_primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
tag = 'v1.0.0rc2'

[dependencies.sr-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
tag = 'v1.0.0rc2'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
tag = 'v1.0.0rc2'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
tag = 'v1.0.0rc2'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
tag = 'v1.0.0rc2'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
tag = 'v1.0.0rc2'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
tag = 'v1.0.0rc2'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.merkle]
default_features = false
path = '../merkle'
package = 'plasm-merkle'

[dependencies.utxo]
default_features = false
path = '../utxo'
package = 'plasm-utxo'


[features]
default = ["std"]
std = [
    'parity-codec/std',
    'primitives/std',
    'sr_primitives/std',
    'sr-io/std',
    'rstd/std',
    'balances/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'merkle/std',
    'utxo/std',
   	'serde_derive',
	'serde/std',
]
