[package]
name = "plasm-parent-pgspec"
version = "0.1.0"
authors = ["Takumi Yamashita <takumi@staked.co.jp>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = "4.1.1"

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
version = '2.0.0'

[dependencies.sr_primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
version = '2.0.0'

[dependencies.sr-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
version = '2.0.0'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
version = '2.0.0'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
version = '2.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
version = '2.0.0'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
version = '2.0.0'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
version = '2.0.0'

[dependencies.contract]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-contracts'
version = '2.0.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[features]
default = ["std"]
std = [
    'parity-codec/std',
    'primitives/std',
    'sr_primitives/std',
    'sr-io/std',
    'rstd/std',
    'balances/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'contract/std',
   	'serde_derive',
	'serde/std',
]
