[package]
name = "plasm-parent-pgspec"
version = "0.1.0"
authors = ["Takumi Yamashita <takumi@staked.co.jp>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = "4.1.1"

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.sr_primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.sr-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.contract]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-contracts'
rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[features]
default = ["std"]
std = [
    'parity-codec/std',
    'primitives/std',
    'sr_primitives/std',
    'sr-io/std',
    'rstd/std',
    'balances/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'contract/std',
   	'serde_derive',
	'serde/std',
]
