[package]
name = "plasm-primitives"
version = "0.1.0"
authors = ["Takumi Yamashita <s.a.t.e.3.ths@gmail.com>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.sr_primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
tag = 'v1.0.0rc2'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
tag = 'v1.0.0rc2'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[features]
default = ["std"]
std = [
    'parity-codec/std',
    'sr_primitives/std',
    'rstd/std',
   	'serde_derive',
	'serde/std',
]
