[package]
name = "plasm-utxo"
version = "0.1.0"
authors = ["Takumi Yamashita <s.a.t.e.3.ths@gmail.com>"]
edition = "2018"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[dependencies.sr_primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'b5b5c32895c046767827b8264f868e80b22965ad'

[features]
default = ["std"]
std = [
    'parity-codec/std',
    'primitives/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'consensus/std',
    'version/std',
    'serde_derive',
    'serde',
    'safe-mix/std',
    'sr_primitives/std',
]
