[package]
name = "pallet-astar-operator"
version = "1.10.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://docs.astar.network/"
repository = "https://github.com/staketechnologies/Astar/"
description = "FRAME pallet to manage operator developing smart contracts"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0", features = ["derive"], default-features = false }
serde = { version = "1.0.106", features = ["derive"], optional = true }

sp-core = { version = "3.0.0", default_features = false }
frame-system = { version = "3.0.0", default_features = false }
frame-support = { version = "3.0.0", default_features = false }
pallet-evm = { path = "../../vendor/frontier/frame/evm", default-features = false }
pallet-contracts = { version = "3.0.0", default_features = false }

[dev-dependencies]
wat = "1.0"
sp-io = "3.0.0"
sp-std = "3.0.0"
sp-runtime = "3.0.0"
pallet-balances = "3.0.0"
pallet-timestamp = "3.0.0"
pallet-randomness-collective-flip = "3.0.0"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-core/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-evm/std",
    "pallet-contracts/std",
]
